Cambiando ruta de img nuevamente

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </nav>
         <div class="galeria">
             <div class="item diseno">
-                <img src="./img/trabajo1.png" alt="">
+                <img src="img/trabajo1.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="item programacion">
-                <img src="./img/trabajo2.png" alt="">
+                <img src="img/trabajo2.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <div class="item animaciones">
-                <img src="./img/trabajo3.png" alt="">
+                <img src="img/trabajo3.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="item animaciones">
-                <img src="./img/trabajo5.png" alt="">
+                <img src="img/trabajo5.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="item programacion">
-                <img src="./img/trabajo6.png" alt="">
+                <img src="img/trabajo6.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <div class="item diseno">
-                <img src="./img/trabajo7.png" alt="">
+                <img src="img/trabajo7.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -271,7 +271,7 @@
                 </div>
             </div>
             <div class="item programacion">
-                <img src="./img/trabajo8.png" alt="">
+                <img src="img/trabajo8.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
@@ -279,7 +279,7 @@
                 </div>
             </div>
             <div class="item programacion">
-                <img src="./img/trabajo9.png" alt="">
+                <img src="img/trabajo9.png" alt="">
                 <div class="info">
                     <h3>Titulo del trabajo</h3>
                     <span>HTML</span><span>CSS</span><span>Javascript</span>
